# DreamWeaver

./: .gitignore  README.md  docker-compose.yml
backend/python-ai/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/python-ai/alembic/: env.py
backend/python-ai/alembic/versions/: 001_initial_schema.py  002_add_chapter_content.py
backend/python-ai/src/agents/: __init__.py  consistency_agent.py  consistency_rules.py  context_agent.py  planner_agent.py  reviewer_agent.py  rewrite_agent.py  writer_agent.py
backend/python-ai/src/api/: main.py
backend/python-ai/src/checkpoint/: __init__.py
backend/python-ai/src/core/: config.py  database.py  logging.py
backend/python-ai/src/memory/: __init__.py  compression.py  manager.py  schema.py  vector_store.py
backend/python-ai/src/models/: __init__.py  base.py  (+7 more)
backend/python-ai/tests/: test_blueprint_route.py  test_blueprint_schema.py  test_blueprint_service.py  test_blueprint_validation.py  test_consistency_schema.py  test_consistency_service.py  test_draft_gates_route.py  test_draft_route.py  test_health.py  test_llm_client.py  test_memory.py  test_memory_change_schema.py  test_memory_conflict_service.py  test_memory_extraction_prompt.py  test_memory_extraction_service.py  test_memory_retrieval_route.py  test_memory_route.py  test_memory_schema.py  test_models.py  test_outline_context.py  test_outline_prompt.py  test_outline_route.py  test_outline_schema.py  test_outline_service.py  test_provider.py  test_repair_service.py  test_review_schema.py  test_review_service.py  test_schemas.py  test_workflow.py
(+269 files in other folders)
